# mcp-tool-web-search

./: .gitignore  publish.py  pyproject.toml  run.bat  update.bat
examples/: stdio.py  web_search.py
src/mcp_tool_web_search/: __init__.py  __main__.py  log.py  server.py  settings.py
src/mcp_tool_web_search/nodes/: __init__.py  extract_keywords.py  summarize.py
src/mcp_tool_web_search/process/: __init__.py  extract_keywords.py  fetch_content.py  search_urls.py  summarize.py
src/mcp_tool_web_search/providers/: __init__.py  base.py  bocha.py
src/mcp_web_search/: server.py
src/mcp_web_search/nodes/: fetch_content.py  search_urls.py
src/mcp_web_search/providers/: bocha.py
